bugfix. In chat: messages not combined together. If user send one message after another and gap between them is less than 10 minutes and not interfered by other user's message (or reply/forwarded message) - avatar and name should not be added for each message, only for first. | Done: messages combining now.

--- a/src/Components/Message/Message.css
+++ b/src/Components/Message/Message.css
@@ -76,6 +76,10 @@ pre code {
     opacity: 1;
 }
 
+.message-without-avatar .message-content {
+    margin-left: 60px;
+}
+
 .message-highlighted {
     animation: message-highlighted-animation;
     animation-duration: 4s;
@@ -112,6 +116,16 @@ pre code {
     flex-grow: 1;
     flex-shrink: 1;
     overflow: hidden;
+}
+
+.message-content-row {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+}
+
+.message-content-row__left-column {
+    flex-grow: 1;
 }
 
 .message-title {
